--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
   <div class="container">
     <div class="container-Qr">
       <img class="code-qr" src="images/image-qr-code.png" alt="">
-      <h3>Improve your Front-end skills by building projects</h3>
-      <p>Scan the QR code to visit Frontend <br>Mentor and take your coding skills <br>GITto the  next level</p>
+      <h1>Improve your Front-end <br> skills by building projects</h3>
+      <p>Scan the QR code to visit Frontend <br>Mentor and take your coding skills <br>GIT to the  next level</p>
     </div>
   </div>
   
